# ai-code-review

./: .gitignore  LICENSE  Makefile  README.md  install.sh  pyproject.toml  setup.py  test_bad.py
.github/workflows/: test.yml
ai_code_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
codereview/: __init__.py  cli.py  config.py  formatter.py  git_utils.py  reviewer.py
tests/: test_git_utils.py  test_reviewer.py
