[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-review"
version = "1.0.0"
description = "AI-powered code review in your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["rich>=13.0.0"]

[project.scripts]
codereview = "codereview.cli:main"
